feature(group module): basic CRUD
