# module/group/model/request/UpdateGroupRequest.go
@@ -1,0 +1,6 @@
+package request
+
+type UpdateGroupRequest struct {
+	Name        *string `json:"name" binding:"omitempty,min=1,max=255"`
+	Description *string `json:"description" binding:"omitempty,max=4000"`
+}
